# LossyHorisonI

./: .gitignore  README.md  paper.py  pyproject.toml
cuda/rle_extension/: README.md
examples/: texts.txt
runs/distilbert-baseonly-vqre/distilbert-base-cased/: manifest.json
runs/distilbert-baseonly-vqre/distilbert-base-cased/csv/: vqre.csv
runs/paper-20251019-154724/bert-base-cased/csv/: epc.csv
runs/paper-20251020-045935/bert-base-cased/csv/: epc.csv
runs/paper-20251020-145400/bert-base-cased/csv/: epc.csv
runs/paper-20251020-203142/bert-base-cased/: README.md  manifest.json
runs/paper-20251020-205025/distilbert-base-cased/: README.md
runs/roberta-onlyvqre/roberta-base/: README.md  manifest.json
scripts/: bootstrap_cache.py  plot_rd.py  uv_cli_setup.sh  uv_test.sh
src/lossy_horizon/: __init__.py
src/lossy_horizon/bits/: __init__.py  ar_coder.py  bit_cost.py  rank_model.py  rans.py
src/lossy_horizon/cli/: compress.py  eval_rd.py  eval_vqre.py  train_vq.py
src/lossy_horizon/codecs/: __init__.py  epc.py  pm.py  vqre.py  vqre_codec.py
src/lossy_horizon/metrics/: bertscore.py  char_fidelity.py  chrf.py
src/lossy_horizon/models/: __init__.py  bert_vq.py  distilbert_vq.py  mlm_scorer.py  roberta_vq.py
src/lossy_horizon/policies/: __init__.py  masking.py
src/lossy_horizon/utils/: logging.py  repro.py  rle.py
tests/: conftest.py  test_bits.py  test_distilbert_vq_hooks.py  test_epc.py  test_policies.py  test_refine_decode.py  test_roberta_vq_hooks.py  test_vqre.py  test_vqre_codec.py  test_vqre_hooks.py
(+7 files in other folders)
